--- a/README
+++ b/README
@@ -2,6 +2,8 @@ To watch-reload `fil-data` folder:
 
 `nodemon --harmony --harmony_default_parameters ../.tmp/index.js --verbose -e js,styl,jade`
 
+`nodemon --harmony --harmony_default_parameters ../../fil/.tmp/index.js --verbose -e js,styl,jade`
+
 To see output:
 
 `http-server -p 3333`
